feat: add product price quote rules
